# ab_test_calculator

./: Procfile  README.md  main.py  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: ci.yml
.streamlit/: config.toml
assets/: .~lock.Calculadora de Validação de Testes A_B - Conversion Zone (conversionzone.com.br).xlsx#  Calculadora de Validação de Testes A_B - Conversion Zone (conversionzone.com.br).xlsx
domain/entities/: variation.py
domain/entities/pytests/: test_ab_tester.py  test_variation_module.py
domain/use_cases/: ab_statistical_validator.py
src/: app.py
src/components/: ab_tester_component.py  results_component.py  variation_component.py
src/domain/entities/: ab_tester.py  configuration_tester.py  variation.py
src/domain/use_cases/: ab_statistical_validator.py
src/logic/: analysis.py
tests/: test_ab_statistical_validator.py
tests/entities/: test_variation.py
